load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:constants.bzl", "GO_PREFIX")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = GO_PREFIX + "/helloworld/client",
    visibility = ["//visibility:private"],
    deps = [
        "//helloworld/common:go_default_library",
        "//protobufs/helloworld:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
