package(default_visibility = ["//visibility:public"])

load("//:constants.bzl", "GO_PREFIX")
load("@build_stack_rules_proto//go:go_grpc_library.bzl", "go_grpc_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "go_default_library",
    importpath = GO_PREFIX + "/protobufs/helloworld",
    deps = ["//protobufs/helloworld:helloworld_proto"],
)
