package(default_visibility = ["//visibility:public"])

load("//:constants.bzl", "GO_PREFIX")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = GO_PREFIX + "/protobufs/helloworld",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
)
