package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rickypai/golang-boilerplate/protobufs/helloworld",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
)
